created start stop and update scripts for the generic example and for valheim

--- a/poker.ini
+++ b/poker.ini
@@ -7,7 +7,7 @@ authorized=everyone
 
 # Any commands not properly sanitized provide an attack surface.  Use at your own risk!
 [COMMANDS]
-status=ps -ef|grep poker
-start=echo "start not yet implemented"
-stop=echo "stop not yet implemented"
-save=echo "save not yet implemented"
+status=gamescripts/poker/status.sh
+start=gamescripts/poker/start.sh
+stop=gamescripts/poker/stop.sh
+update=gamescripts/poker/update.sh
